--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ ul {
   
 }
 
-textarea[name="user-input"]{/* textarea OK*/
+textarea[name="user-input"]{/* textarea */
   padding: 10px;
   width: 89%;
   height: 130px;
@@ -30,7 +30,7 @@ textarea[name="user-input"]{/* textarea OK*/
   border-radius: 30px;
 }
 
-#reset-button {/* estructura button OK*/ 
+#reset-button {/* estructura button */ 
   padding: 10px;
   width: 15%;
   height: 50px;
@@ -65,8 +65,8 @@ header {
   font-size: 15px;
   background-color: rgb(61, 61, 56);
   border: rgb(250, 247, 247) 2px solid;
-  border-radius: 30px; /*borde redondo*/
-  padding: 6px 25px; /*mueve texto y tamaño de caja*/
+  border-radius: 30px; 
+  padding: 6px 25px; 
   color: white;
   width: calc(50% - 20px);
   height: 50px;
